separating project into folders

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Time for Feathers",
     "short_name": "TimeForFeathers",
-    "start_url": "./",
-    "scope": ".",
+    "start_url": "./index.html",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#fdfdfd",
     "theme_color": "#db4938",
